# HQSP

./: LICENSE  README.md  requirements.txt  setup.cfg
src/hqsp/: hqsp.py
src/hqsp/auth/: storage.py  token_dealer.py
