[metadata]
name = HQSP
version = 0.0.1
author = Peter Simpson
author_email = author@example.com
description = A novel web framework for building integrations with legal tech platforms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8.9

[options.packages.find]
where = src

[flake8]
max-line-length = 119
exclude = migrations,env